# PlayerCulling

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
api/: build.gradle.kts
buildSrc/: build.gradle.kts  settings.gradle.kts
common/: build.gradle.kts
core/: build.gradle.kts
gradle/: libs.versions.toml
meme/: build.gradle.kts
meme-codec/: build.gradle.kts
mod-fabric/: build.gradle.kts
natives/: Cargo.toml  Makefile  build.gradle.kts
natives/src/main/cpp/src/: abstraction.h  java_interface.cpp  occlusion_cache.cpp  occlusion_cache.h  occlusion_instance.cpp  occlusion_instance.h  simd_culling.cpp  util.h  vector.h
natives/src/main/java/de/pianoman911/playerculling/natives/: NativeLibLoader.java  NativePart.java  NativesAdapter.java
natives/src/main/java/de/pianoman911/playerculling/natives/avx2/: Avx2Bridge.java  ChunkCache.java  DynamicWorld.java  NativeDataProvider.java  OcclusionInstance.java  WorldCache.java
natives/src/main/rust/: lib.rs  vector.rs
natives/src/main/rust/vector/: f64vec3.rs  i32vec3.rs  i32vec3x8.rs
platform-common/: build.gradle.kts
platform-fabric/: build.gradle.kts
platform-fabric-12111/: build.gradle.kts
platform-fabric-1214/: build.gradle.kts
platform-fabric-1215/: build.gradle.kts
platform-fabric-1217/: build.gradle.kts
platform-fabric-1219/: build.gradle.kts
platform-fabric-261/: build.gradle.kts
platform-fabric-2612/: build.gradle.kts
platform-folia-nms-1214/: build.gradle.kts
platform-folia-nms-1216/: build.gradle.kts
platform-folia-nms-261/: build.gradle.kts
(+366 files in other folders)
