[package]
name = "playerculling"
version = "1.0.0"
edition = "2024"
license = "AGPL-3"
repository = "https://github.com/MinceraftMC/PlayerCulling"

[[bin]]
name = "playerculling"
path = "src/main/rust/lib.rs"

[dependencies]
microbench = "0.5.0"

[profile.release-with-debug]
inherits = "release"
debug = true